Fix bug in exon func filter which ignored frameshifting indels, UI updates to LoginPanel

--- a/war/VarViewer.css
+++ b/war/VarViewer.css
@@ -60,8 +60,41 @@
 }
 
 .loginpanel {
-	margin-left: 20px;
-	margin-top: 30px;	
+	margin-left: 70px;
+	margin-top: 70px;
+	width: 560px;
+	background-image : url('images/loginPanel.png');
+	background-repeat: no-repeat;	
+}
+
+.loginbutton {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 13pt;
+	margin-left: 30px;
+}
+
+.usernamefield {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12pt;
+	position: relative;
+	background-color: transparent;
+	border: 0px;
+	top: 152px;
+	left: 88px;
+	height: 30px;
+	width: 300px;
+}
+
+.passwordfield {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12pt;
+	position: relative;
+	background-color: transparent;
+	top: 55px;
+	border: 0px;
+	left: 88px;
+	height: 30px;
+	width: 300px;
 }
 
 .filterspanel {
@@ -69,6 +102,7 @@
 	margin: 0px;
 	width: 240px;
 	min-height: 500px;
+	
 }
 
 .filterbox {
